istio/003-cors-policy/echo-frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-frontend-vs
spec:
  hosts:
  - "echo.service.local"
  gateways:
  - echo-gw
  http:
  - match:
    - uri:
        prefix: /echo
    route:
    - destination:
        port:
          number: 8080
        host: echo-frontend-service
